# smoltools-app

./: .gitignore  Procfile  README.md  environment.yml  index.html  requirements.txt  setup.cfg
smoltools_app/: albatrosy.py  albatrosy_dimer.py  albatrosy_monomer.py  fret0.py  launch.py  launch_web.py
smoltools_app/albatrosy/: analysis.py  app.py
smoltools_app/albatrosy/widgets/: distance.py  noe_map.py  pdb_loader.py  scatter.py
smoltools_app/apps/: __init__.py  albatrosy.py  albatrosy_dimer.py  albatrosy_monomer.py  fret0.py
smoltools_app/common/widgets/: containers.py  pdb_input.py  pdb_loader.py  table.py
smoltools_app/fret0/: app.py
smoltools_app/fret0/widgets/: distance.py  e_fret.py  pdb_loader.py  r0_finder.py
smoltools_app/noesy_neighbors/: analysis.py  app.py
smoltools_app/noesy_neighbors/widgets/: distance.py  noe_map.py  scatter.py
smoltools_app/rate_my_plate/: app.py
smoltools_app/rate_my_plate/widgets/: excel_download.py  excel_loader.py
smoltools_app/templates/: template.py
smoltools_app/utils/: colors.py  config.py  paths.py
smoltools_app/widgets/: distance.py  e_fret.py  pdb_loader.py  r0_finder.py
smoltools_app/widgets/albatrosy/: distance.py  noe_map.py  pdb_loader.py  scatter.py
smoltools_app/widgets/components/: pdb_input.py  table.py
smoltools_app/widgets/fret0/: distance.py  e_fret.py  pdb_loader.py  r0_finder.py
