[metadata]
name = smoltools-app
version = 1.0.1
author = Andrew Sung
author_email = aysung300@gmail.com
description = Panel dashboard for interacting with various smoltools modules..
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AYSung/smoltools-app/
project_urls =
    Bug Tracker = https://github.com/AYSung/smoltools-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires:
    pandas>=1.4.0
    numpy>=1.22.2
    altair>=4.2.0
    scipy>=1.8.0
    smoltools>=1.0.14
    panel>=0.13.0

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = .